--- a/21_Node.js/require_with_import/nexss-blog.html
+++ b/21_Node.js/require_with_import/nexss-blog.html
@@ -1,6 +1,6 @@
 ---
-title: "BLOG Nexss Programmer - Frontend"
-permalink: /en/11_blog-nexss-programmer/frontend/nexss-blog.html
+title: "BLOG Node.js - Require_with_import"
+permalink: /21_Node.js/require_with_import/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,16 +13,16 @@ permalink: /en/11_blog-nexss-programmer/frontend/nexss-blog.html
 </script>
 
   <title>
-    BLOG Nexss Programmer - Frontend
+    BLOG Node.js - Require_with_import
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
-  <meta name="description" content="Frontend - Nexss Programmer Blog">
-  <link rel="canonical" href="/11_blog-nexss-programmer/frontend/nexss-blog.html">
+  <meta name="description" content="Require_with_import - Nexss Programmer Blog">
+  
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="BLOG Nexss Programmer - Frontend">
+  <meta property="og:description" content="BLOG Node.js - Require_with_import">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -58,11 +58,11 @@ permalink: /en/11_blog-nexss-programmer/frontend/nexss-blog.html
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003 !important;">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a style="color:yellow;font-weight:bold;" href="/en/11_blog-nexss-programmer/frontend/nexss-blog.html">EN</a>
+                <a style="color:yellow;font-weight:bold;" href="/en/21_Node.js/require_with_import/nexss-blog.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a class="selected" href="/pl/11_blog-nexss-programmer/frontend/nexss-blog.html">PL</a>
+                <a class="selected" href="/pl/21_Node.js/require_with_import/nexss-blog.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -81,23 +81,23 @@ permalink: /en/11_blog-nexss-programmer/frontend/nexss-blog.html
     <div class="nav clearfix">
         <ul>
     <li>
-        <a href="en/index.html#services">services</a>
+        <a href="index.html#services">services</a>
     </li>
     <li>
-        <a class="career" href="en/nexss-career.html">career</a>
+        <a class="career" href="nexss-career.html">career</a>
 
     </li>
     <li>
-        <a href="en/nexss-blog.html"><strong>blog</strong></a>
+        <a href="nexss-blog.html"><strong>blog</strong></a>
 
     </li>
     <li>
-        <a href="en/nexss-portfolio.html">portfolio</a>
+        <a href="nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
         <div class="btn__wrap__center">
-            <a href="en/easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
+            <a href="easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
                 PROGRAMMER</a>
         </div>
     </div>
@@ -107,18 +107,18 @@ permalink: /en/11_blog-nexss-programmer/frontend/nexss-blog.html
     <div class="phone_nav">
         <ul>
     <li>
-        <a href="en/index.html#services">services</a>
+        <a href="index.html#services">services</a>
     </li>
     <li>
-        <a class="career" href="en/nexss-career.html">career</a>
+        <a class="career" href="nexss-career.html">career</a>
 
     </li>
     <li>
-        <a href="en/nexss-blog.html"><strong>blog</strong></a>
+        <a href="nexss-blog.html"><strong>blog</strong></a>
 
     </li>
     <li>
-        <a href="en/nexss-portfolio.html">portfolio</a>
+        <a href="nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
@@ -147,69 +147,83 @@ permalink: /en/11_blog-nexss-programmer/frontend/nexss-blog.html
       <div class="column1">
                 <h3>Welcome</h3>
         <ul>
-                    <li><a href="en/0_Welcome/news/nexss-blog.html">News </a></li>
+                    <li><a href="0_Welcome/news/nexss-blog.html">News </a></li>
                   </ul>
                 <h3>Nexss Programmer</h3>
         <ul>
-                    <li><a href="en/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction </a></li>
-                    <li><a href="en/11_blog-nexss-programmer/installation/nexss-blog.html">Installation </a></li>
-                    <li><a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
-                    <li><a class="active" href="en/11_blog-nexss-programmer/frontend/nexss-blog.html"><strong>Frontend</strong> </a></li>
-                    <li><a href="en/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
+                    <li><a href="11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction </a></li>
+                    <li><a href="11_blog-nexss-programmer/installation/nexss-blog.html">Installation </a></li>
+                    <li><a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
+                    <li><a href="11_blog-nexss-programmer/frontend/nexss-blog.html">Frontend </a></li>
+                    <li><a href="11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
                   </ul>
                 <h3>Node.js</h3>
         <ul>
-                    <li><a href="en/21_Node.js/module_alias/nexss-blog.html">Module_alias </a></li>
-                    <li><a href="en/21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
-                    <li><a href="en/21_Node.js/require_with_import/nexss-blog.html">Require_with_import </a></li>
+                    <li><a href="21_Node.js/module_alias/nexss-blog.html">Module_alias </a></li>
+                    <li><a href="21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
+                    <li><a class="active" href="21_Node.js/require_with_import/nexss-blog.html"><strong>Require_with_import</strong> </a></li>
                   </ul>
                 <h3>Bitwig Studio</h3>
         <ul>
-                    <li><a href="en/333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html">Bitwig VST Video Player </a></li>
+                    <li><a href="333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html">Bitwig VST Video Player </a></li>
                   </ul>
                 <h3>Blender 3D</h3>
         <ul>
-                    <li><a href="en/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates </a></li>
-                    <li><a href="en/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
+                    <li><a href="369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates </a></li>
+                    <li><a href="369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
                   </ul>
                 <h3>Natron</h3>
         <ul>
-                    <li><a href="en/639_blog-natron/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
+                    <li><a href="639_blog-natron/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
                   </ul>
                 <h3>Modern Web</h3>
         <ul>
-                    <li><a href="en/669_Modern-Web/Interesting-html5-tags/nexss-blog.html">Interesting Html5 Tags </a></li>
+                    <li><a href="669_Modern-Web/Interesting-html5-tags/nexss-blog.html">Interesting Html5 Tags </a></li>
                   </ul>
                 <h3>Our Free Packages</h3>
         <ul>
-                    <li><a href="en/969_Our-free-packages/introduction/nexss-blog.html">Introduction </a></li>
-                    <li><a href="en/969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages </a></li>
-                    <li><a href="en/969_Our-free-packages/@nexssp-command/nexss-blog.html">@nexssp Command </a></li>
-                    <li><a href="en/969_Our-free-packages/@nexssp-os/nexss-blog.html">@nexssp Os </a></li>
+                    <li><a href="969_Our-free-packages/introduction/nexss-blog.html">Introduction </a></li>
+                    <li><a href="969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages </a></li>
+                    <li><a href="969_Our-free-packages/@nexssp-command/nexss-blog.html">@nexssp Command </a></li>
+                    <li><a href="969_Our-free-packages/@nexssp-os/nexss-blog.html">@nexssp Os </a></li>
                   </ul>
               </div>
       <div class="column2">
-        <h1>Frontend functionalities</h1>
-<h2>List of Tutorials</h2>
-<ul>
-<li><a href="/en/11_blog-nexss-programmer/frontend/nexss-blog.html#createnewproject">Create New Project vue2, react17</a></li>
-</ul>
-<p><a name="createnewproject"></a></p>
-<h3>Create new Frontend Project</h3>
-<p>To create new project (now: <strong>vue2</strong>, <strong>react17</strong>)</p>
-<p>Execute the commands accordingly:</p>
-<pre><code class="language-sh">nexss p vue2 myvue2-project
-nexss p vue2 myvue2-project --install
-nexss p react17 react17-project
-</code></pre>
-<h3>Run hot reloading</h3>
-<pre><code class="language-sh"># development
-npm run dev # need before hot
-npm run hot # hot reloading
-</code></pre>
-<h3>Build production bundle</h3>
-<pre><code class="language-sh"># production
-npm run production</code></pre>
+        <h1>Require with Import - NodeJS</h1>
+<p>You can use require and import together with this setup:</p>
+<h2>Files</h2>
+<h3>package.json</h3>
+<pre><code class="language-json">{
+  "main": "esm_main.js",
+  "module": "esm_index.js",
+  "dependencies": {
+    "esm": "^3.2.25"
+  },
+  "esm": {
+    "cjs": true,
+    "mode": "auto",
+    "mainFields": ["modules", "main"]
+  }
+}</code></pre>
+<h3>esm_main.js</h3>
+<pre><code class="language-js">require = require("esm")(module);
+module.exports = require("./esm_index.js");</code></pre>
+<h3>esm_index.js</h3>
+<pre><code class="language-js">// Import statement
+import { hostname } from "os";
+
+// and require
+const os = require("os");
+
+console.log(hostname());
+
+console.log(os.arch());</code></pre>
+<h3>test</h3>
+<pre><code class="language-sh">nexss esm_main.js
+
+# OR just
+
+node esm_main.js</code></pre>
       </div>
     </div>
   </div>
@@ -288,12 +302,12 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
       <div class="ft-main-item">
         <h4 class="ft-title">About</h4>
         <ul>
-          <li><a href="en/index.html#services">Services</a></li>
-          <li><a class="career" href="en/nexss-career.html">Career</a>
+          <li><a href="index.html#services">Services</a></li>
+          <li><a class="career" href="nexss-career.html">Career</a>
 </li>
-          <li><a href="en/nexss-portfolio.html">Portfolio</a>
+          <li><a href="nexss-portfolio.html">Portfolio</a>
 </li>
-          <li><a href="en/faq.html">FAQ</a>
+          <li><a href="faq.html">FAQ</a>
 </li>
           <li></li>
         </ul>
@@ -302,27 +316,27 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
         <h4 class="ft-title">Nexss Programmer</h4>
         <ul>
           <li><a title="Nexss Programmer - Video Presentation" target="_blank" style="color:yellow;" href="https://www.youtube.com/watch?v=7WbnYyEnBNk">Video Presentation</a></li>
-          <li><a href="en/easy-install-nexss-programmer.html">Install</a>
+          <li><a href="easy-install-nexss-programmer.html">Install</a>
 </li>
           <li>
-            <a href="en/nexss-programming-languages.html">Supported programming languages</a>
+            <a href="nexss-programming-languages.html">Supported programming languages</a>
 
           </li>
           <li>
-            <a href="en/nexss-programmer-features.html">Features</a>
+            <a href="nexss-programmer-features.html">Features</a>
 
 
           </li>
           <li>
-            <a href="en/programmer.html">Documentation</a>
+            <a href="programmer.html">Documentation</a>
 
           </li>
           <li>
-            <a href="en/969_Our-free-packages/list-of-free-packages/nexss-blog.html">Packages</a>
+            <a href="969_Our-free-packages/list-of-free-packages/nexss-blog.html">Packages</a>
 
           </li>
           <li>
-            <a href="en/fund.html">Fund</a>
+            <a href="fund.html">Fund</a>
 
           </li>
           <li></li>
@@ -331,9 +345,9 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
       <div class="ft-main-item">
         <h4 class="ft-title">Learn</h4>
         <ul>
-          <li><a href="en/nexss-blog.html"><strong>Blog</strong></a>
+          <li><a href="nexss-blog.html"><strong>Blog</strong></a>
 </li>
-          <li><a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+          <li><a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
 </li>
           <li></li>
         </ul>
@@ -341,20 +355,20 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
       <div class="ft-main-item">
         <h4 class="ft-title">Contact</h4>
         <ul>
-          <li><a href="en/index.html#contacts">Contact</a></li>
+          <li><a href="index.html#contacts">Contact</a></li>
           <li>
             <h5><a style="color:#00ff90;" href="mailto:hello@nexss.com">Get a Quote</a></h5>
           </li>
           <li><a href="mailto:hello@nexss.com">
               hello@nexss.com</a></li>
           <!-- <li>
-                    <a href="en/privacy-policy.html">Privacy Policy</a>
+                    <a href="privacy-policy.html">Privacy Policy</a>
                   </li>
                   <li>
-                    <a href="en/terms-and-conditions.html">Terms and Conditions</a>
+                    <a href="terms-and-conditions.html">Terms and Conditions</a>
                   </li> -->
           <li>
-            <a href="en/fund.html">Fund</a>
+            <a href="fund.html">Fund</a>
 
           </li>
           <li></li>
@@ -380,7 +394,7 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
   </div>
   <div id="infoCookie" style="z-index:369369369;position:fixed;bottom:0;height:55px;background-color:black;width:100%;visibility:hidden;">
     <b>Nexss.com</b> website use cookies on this website to log statistics data.<br>
-    More here: <a style="color:yellow;" target="_blank" href="en/privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
+    More here: <a style="color:yellow;" target="_blank" href="privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 <script type="text/javascript">
