--- a/en/21_Node.js/lockfileVersion-issue/nexss-blog.html
+++ b/en/21_Node.js/lockfileVersion-issue/nexss-blog.html
@@ -161,7 +161,7 @@ permalink: /en/21_Node.js/lockfileVersion-issue/nexss-blog.html
         <ul>
                     <li><a href="en/21_Node.js/module_alias/nexss-blog.html">Module_alias </a></li>
                     <li><a class="active" href="en/21_Node.js/lockfileVersion-issue/nexss-blog.html"><strong>LockfileVersion Issue</strong> </a></li>
-                    <li><a href="en/21_Node.js/npm-link-unlink/nexss-blog.html">Npm Link Unlink </a></li>
+                    <li><a href="en/21_Node.js/require_with_import/nexss-blog.html">Require_with_import </a></li>
                   </ul>
                 <h3>Bitwig Studio</h3>
         <ul>
