--- a/pl/nexss-blog.html
+++ b/pl/nexss-blog.html
@@ -160,6 +160,7 @@ permalink: /pl/nexss-blog.html
                     <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
                     <li><a href="pl/11_blog-nexss-programmer/frontend/nexss-blog.html">Frontend </a></li>
                     <li><a href="pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
+                    <li><a href="pl/11_blog-nexss-programmer/file-dropper/nexss-blog.html">File Dropper </a></li>
                   </ul>
                 <h3>Node.js</h3>
         <ul>
@@ -194,7 +195,18 @@ permalink: /pl/nexss-blog.html
               </div>
       <div class="column2">
         <h1>News</h1>
-<h2>Nexss Programmer release <b>2.5.58</b> - Vue2 and React17</h2>
+<h2>Nexss Programmer release <b>2.5.61</b> - Preact</h2>
+<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">November 10th, 2021</span></p>
+<ul>
+<li>New functionality. Create new project types (<strong>preact</strong>) with <strong>hot reloading</strong>.
+<pre><code class="language-sh">nexss p preact myproject-preact 
+nexss p preact myproject-preact --install</code></pre>
+<p>option <strong>--install</strong> installs all necessary packages.</p>
+<ul>
+<li><a href="https://github.com/nexssp/cli/releases/tag/2.5.61">more</a>
+<h2>Nexss Programmer release <b>2.5.58</b> - Vue2 and React17</h2></li>
+</ul></li>
+</ul>
 <p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">November 9th, 2021</span></p>
 <ul>
 <li>New functionality. Create new project types (<strong>vue2</strong>, <strong>react17</strong>) with <strong>hot reloading</strong>.</li>
