--- a/11_blog-nexss-programmer/file-dropper/nexss-blog.html
+++ b/11_blog-nexss-programmer/file-dropper/nexss-blog.html
@@ -1,6 +1,6 @@
 ---
-title: "BLOG Welcome - News"
-permalink: /0_Welcome/news/nexss-blog.html
+title: "BLOG Nexss Programmer - File Dropper"
+permalink: /11_blog-nexss-programmer/file-dropper/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,16 +13,16 @@ permalink: /0_Welcome/news/nexss-blog.html
 </script>
 
   <title>
-    BLOG Welcome - News
+    BLOG Nexss Programmer - File Dropper
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
-  <meta name="description" content="News - Nexss Programmer Blog">
+  <meta name="description" content="File Dropper - Nexss Programmer Blog">
   
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="BLOG Welcome - News">
+  <meta property="og:description" content="BLOG Nexss Programmer - File Dropper">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -58,11 +58,11 @@ permalink: /0_Welcome/news/nexss-blog.html
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003 !important;">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a style="color:yellow;font-weight:bold;" href="/en/0_Welcome/news/nexss-blog.html">EN</a>
+                <a style="color:yellow;font-weight:bold;" href="/en/11_blog-nexss-programmer/file-dropper/nexss-blog.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a class="selected" href="/pl/0_Welcome/news/nexss-blog.html">PL</a>
+                <a class="selected" href="/pl/11_blog-nexss-programmer/file-dropper/nexss-blog.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -147,7 +147,7 @@ permalink: /0_Welcome/news/nexss-blog.html
       <div class="column1">
                 <h3>Welcome</h3>
         <ul>
-                    <li><a class="active" href="0_Welcome/news/nexss-blog.html"><strong>News</strong> </a></li>
+                    <li><a href="0_Welcome/news/nexss-blog.html">News </a></li>
                   </ul>
                 <h3>Nexss Programmer</h3>
         <ul>
@@ -156,7 +156,7 @@ permalink: /0_Welcome/news/nexss-blog.html
                     <li><a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
                     <li><a href="11_blog-nexss-programmer/frontend/nexss-blog.html">Frontend </a></li>
                     <li><a href="11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
-                    <li><a href="11_blog-nexss-programmer/file-dropper/nexss-blog.html">File Dropper </a></li>
+                    <li><a class="active" href="11_blog-nexss-programmer/file-dropper/nexss-blog.html"><strong>File Dropper</strong> </a></li>
                   </ul>
                 <h3>Node.js</h3>
         <ul>
@@ -190,123 +190,41 @@ permalink: /0_Welcome/news/nexss-blog.html
                   </ul>
               </div>
       <div class="column2">
-        <h1>News</h1>
-<h2>Nexss Programmer release <b>2.5.61</b> - Preact</h2>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">November 10th, 2021</span></p>
-<ul>
-<li>New functionality. Create new project types (<strong>preact</strong>) with <strong>hot reloading</strong>.
-<pre><code class="language-sh">nexss p preact myproject-preact 
-nexss p preact myproject-preact --install</code></pre>
-<p>option <strong>--install</strong> installs all necessary packages.</p>
-<ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.5.61">more</a>
-<h2>Nexss Programmer release <b>2.5.58</b> - Vue2 and React17</h2></li>
-</ul></li>
-</ul>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">November 9th, 2021</span></p>
-<ul>
-<li>New functionality. Create new project types (<strong>vue2</strong>, <strong>react17</strong>) with <strong>hot reloading</strong>.</li>
-</ul>
-<pre><code class="language-sh">nexss p vue2 myproject-vue2
-nexss p react17 myproject-react17 --install</code></pre>
-<p>option <strong>--install</strong> installs all necessary packages.</p>
-<ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.5.58">more</a>
-<h2>Nexss Programmer release <b>2.5.51</b></h2></li>
-</ul>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">October 24th, 2021</span></p>
-<p>Fix for Linux: Package update was showing getShell not found. (@nexssp/package)</p>
-<ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.5.51">more</a>
-<h2>Nexss Programmer release <b>2.5.47</b></h2></li>
-</ul>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">October 19th, 2021</span></p>
-<p>Added error custom definition per project/package<br>
-New Package <strong>Audio</strong>. Package <strong>Audio/Split</strong> splits your audio per 2,3 or 5 separate tracks. For example 2 will separate vocal and accompaniment.</p>
-<ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.5.47">more</a>
-<h2>Nexss Programmer release <b>2.5.44</b></h2></li>
-</ul>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">October 9th, 2021</span></p>
-<p>Improvements+<br>
-<strong>CVE-2021-3807</strong> Inefficient Regular Expression Complexity in chalk/ansi-regex</p>
-<ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.5.44">more</a>
-<h2>Nexss Programmer release <b>2.5.43</b></h2></li>
-</ul>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">September 30th, 2021</span></p>
-<p><strong>CVE-2021-3749</strong> Incorrect Comparison in axios</p>
-<ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.5.43">more</a>
-<h2>Nexss.com Job Openings</h2></li>
-</ul>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">September 22nd, 2021</span></p>
-<p>We are looking for people who are willing to <strong>join our team</strong>. All positions are <strong>REMOTE</strong>. Please check our <strong>Job Openings</strong></p>
-<ul>
-<li><a href="nexss-career.html">more</a>
-<h2>Nexss Programmer new version <b>2.5.31</b></h2></li>
-</ul>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">June 11th, 2021</span></p>
-<p>New 2.5.x version
-A lot of improvements:</p>
-<p>Now you can also use nexss programmer as separate tools.. and as a full cli tool: <a href="https://www.npmjs.com/package/@nexssp/cli">@nexssp/<strong>cli</strong></a></p>
-<h2>Cli tools and libraries</h2>
-<ul>
-<li><a href="https://www.npmjs.com/package/@nexssp/cli">@nexssp/<strong>cli</strong></a> - nexss programmer - all tools, languages together</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/command">@nexssp/<strong>command</strong></a> - easy terminal commands</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/config">@nexssp/<strong>config</strong></a> - config system yml, json</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/file">@nexssp/<strong>file</strong></a> - file templates with over 50 programming language</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/ensure">@nexssp/<strong>ensure</strong></a> - ensure mulitple os packages installed</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/cache">@nexssp/<strong>cache</strong></a> - caching library</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/language">@nexssp/<strong>language</strong></a> - install programming environments, manage packages for each language</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/min">@nexssp/<strong>min</strong></a> - minimizing library</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/os">@nexssp/<strong>os</strong></a> - multiple os library</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/package">@nexssp/<strong>package</strong></a> - managing Nexss Programmer packages (git repositories)</li>
-<li>@nexssp/<strong>process</strong> - managing process library (will be added in future versions - it is available up to 2.4.x as nexss programmer feature)</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/project">@nexssp/<strong>project</strong></a> - managing Nexss Programmer projects, create new</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/test">@nexssp/<strong>test</strong></a> - testing library</li>
-</ul>
-<h2>Libraries</h2>
-<ul>
-<li><a href="https://www.npmjs.com/package/@nexssp/ansi">@nexssp/<strong>ansi</strong></a> - colors, cursor</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/const">@nexssp/<strong>const</strong></a> - constants in JS/NodeJS</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/data">@nexssp/<strong>data</strong></a> - data validate, test</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/dddebug">@nexssp/<strong>dddebug</strong></a> - debugging functions</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/expression-parser">@nexssp/<strong>expression-parser</strong></a> - variable template system</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/extend">@nexssp/<strong>extend</strong></a> - extend standard functions of JavaScript/NodeJS</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/logdebug">@nexssp/<strong>logdebug</strong></a> - logging, debugging script</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/packunpack">@nexssp/<strong>packunpack</strong></a> - pack/unpack library with .gitignore</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/plugin">@nexssp/<strong>plugin</strong> </a>- plugin system</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/stack">@nexssp/<strong>stack</strong></a> - pretty error stack</li>
-<li>
-<p><a href="https://www.npmjs.com/package/@nexssp/system">@nexssp/<strong>system</strong></a> - run system commands</p>
-<ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.5.31">more</a>
-<h2>Nexss Programmer new version <b>2.4.0</b></h2></li>
-</ul>
-</li>
-</ul>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">May 3rd, 2021</span></p>
-<p>A LOT OF REFACTORING AND IMPROVEMENTS: </p><ul><li>New packages:<b>@nexssp/min
-@nexssp/test
-@nexssp/const
-@nexssp/dddebug
-@nexssp/stack</b></li><li><b>new generic testing module</b></li><li><b>much more to come..</b></li></ul><p></p>
-<ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.2.40">more</a>
-<h2>Nexss Programmer new version <b>2.2.40</b></h2></li>
-</ul>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">April 25th, 2021</span></p>
-<p>NEW FUNCTIONALITIES ADDED: </p><ul><li><b>nexss run</b></li><li><b>nexss cache rebuild</b></li><li><b>big efficiency improvement</b></li></ul><p></p>
-<ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.2.40">more</a>
-<h2>Nexss Programmer new version <b>2.2.24</b></h2></li>
-</ul>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">March 29th, 2021</span></p>
-<p>NEW LANGUAGE ADDED: <b>LiveScript</b></p>
-<ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.2.24">more</a></li>
-</ul>
+        <h1>File Dropper</h1>
+<p>Package: <strong>Select/Dropper</strong> <a href="https://github.com/nexssp/package_select">https://github.com/nexssp/package_select</a>
+Select/Dropper now works only on Windows. Anyone is very welcome to write it for Linux and MacOS.</p>
+<p>File dropper allow to execute program in any language after dropping a file. You specify a command which you wish to execute in the --nxsExecute param. Please see below for details.</p>
+<h2>With -bg (Nexss Programmer Background Command)</h2>
+<p>Whatever file you will drop on the displayed window it will execute program in --nxsExecute. There you can use variables like on "default" and "helloWorld" templates.</p>
+<pre><code class="language-py">
+# add here the begining of Nexss Programmer template like on default or hello world template.
+# eg for python see: https://github.com/nexssp/language_python/blob/master/templates/helloWorld.py
+
+parsedJson["PythonOutput"] = "Hello from Python! " + \
+    str(platform.python_version()) + parsedJson["nxsIn"] # parsedJson["nxsIn"] contains path to the file you dropped in
+
+# and here the end of the template</code></pre>
+<pre><code class="language-sh">nexss -bg Select/Dropper  --_color=11ff55 --_x=100 \
+--_width=220 --_height=150 --_text="Action 1" --nxsExecute="nexss myprogram.py"</code></pre>
+<h2>With nohup version (Powershell)</h2>
+<p>See for more Nexss Programmer examples: <a href="https://github.com/nexssp/package_nexss/tree/master/Examples">https://github.com/nexssp/package_nexss/tree/master/Examples</a></p>
+<pre><code class="language-ps1"># Nexss Programmer MultiDropper Example
+
+function nohup($command) {
+    Start-Process -FilePath "$env:comspec" -ArgumentList "/c $command"
+}
+
+# All 3 commands in one line
+nohup('nexss Select/Dropper --process:title="My Action 1 - Image Resize"
+--_color=11ff55 --_x=100 --_width=220 --_height=150 --_text="Action 1"
+--nxsExecute="nexss action1.nexss"')
+nohup('nexss Select/Dropper --process:title="My Action 1 - Send Emails"
+--_color=55ff55 --_x=500 --_width=220 --_height=150 --_text="Action 2"
+--nxsExecute="nexss action2.nexss"')
+nohup('nexss Select/Dropper --process:title="My Action 1 - Another"
+--_color=88ffff --_x=900 --_width=220 --_height=150 --_text="Action 3 - Custom"
+--nxsExecute="nexss action3.nexss"')
+</code></pre>
       </div>
     </div>
   </div>
