--- a/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
+++ b/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
@@ -156,6 +156,7 @@ permalink: /369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
                     <li><a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
                     <li><a href="11_blog-nexss-programmer/frontend/nexss-blog.html">Frontend </a></li>
                     <li><a href="11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
+                    <li><a href="11_blog-nexss-programmer/file-dropper/nexss-blog.html">File Dropper </a></li>
                   </ul>
                 <h3>Node.js</h3>
         <ul>
