--- a/pl/11_blog-nexss-programmer/file-dropper/nexss-blog.html
+++ b/pl/11_blog-nexss-programmer/file-dropper/nexss-blog.html
@@ -1,6 +1,6 @@
 ---
-title: "BLOG Node.js - Require_with_import"
-permalink: /pl/21_Node.js/require_with_import/nexss-blog.html
+title: "BLOG Nexss Programmer - File Dropper"
+permalink: /pl/11_blog-nexss-programmer/file-dropper/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="pl"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,16 +13,16 @@ permalink: /pl/21_Node.js/require_with_import/nexss-blog.html
 </script>
 
   <title>
-    BLOG Node.js - Require_with_import
+    BLOG Nexss Programmer - File Dropper
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
-  <meta name="description" content="Require_with_import - Nexss Programmer Blog">
+  <meta name="description" content="File Dropper - Nexss Programmer Blog">
   
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="BLOG Node.js - Require_with_import">
+  <meta property="og:description" content="BLOG Nexss Programmer - File Dropper">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -58,11 +58,11 @@ permalink: /pl/21_Node.js/require_with_import/nexss-blog.html
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003 !important;">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a href="/en/21_Node.js/require_with_import/nexss-blog.html">EN</a>
+                <a href="/en/11_blog-nexss-programmer/file-dropper/nexss-blog.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/21_Node.js/require_with_import/nexss-blog.html">PL</a>
+                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/11_blog-nexss-programmer/file-dropper/nexss-blog.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -156,13 +156,13 @@ permalink: /pl/21_Node.js/require_with_import/nexss-blog.html
                     <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
                     <li><a href="pl/11_blog-nexss-programmer/frontend/nexss-blog.html">Frontend </a></li>
                     <li><a href="pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/file-dropper/nexss-blog.html">File Dropper </a></li>
+                    <li><a class="active" href="pl/11_blog-nexss-programmer/file-dropper/nexss-blog.html"><strong>File Dropper</strong> </a></li>
                   </ul>
                 <h3>Node.js</h3>
         <ul>
                     <li><a href="pl/21_Node.js/module_alias/nexss-blog.html">Module_alias </a></li>
                     <li><a href="pl/21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
-                    <li><a class="active" href="pl/21_Node.js/require_with_import/nexss-blog.html"><strong>Require_with_import</strong> </a></li>
+                    <li><a href="pl/21_Node.js/require_with_import/nexss-blog.html">Require_with_import </a></li>
                   </ul>
                 <h3>Bitwig Studio</h3>
         <ul>
@@ -190,41 +190,41 @@ permalink: /pl/21_Node.js/require_with_import/nexss-blog.html
                   </ul>
               </div>
       <div class="column2">
-        <h1>Require with Import - NodeJS</h1>
-<p>You can use require and import together with this setup:</p>
-<h2>Files</h2>
-<h3>package.json</h3>
-<pre><code class="language-json">{
-  "main": "esm_main.js",
-  "module": "esm_index.js",
-  "dependencies": {
-    "esm": "^3.2.25"
-  },
-  "esm": {
-    "cjs": true,
-    "mode": "auto",
-    "mainFields": ["modules", "main"]
-  }
-}</code></pre>
-<h3>esm_main.js</h3>
-<pre><code class="language-js">require = require("esm")(module);
-module.exports = require("./esm_index.js");</code></pre>
-<h3>esm_index.js</h3>
-<pre><code class="language-js">// Import statement
-import { hostname } from "os";
+        <h1>File Dropper</h1>
+<p>Package: <strong>Select/Dropper</strong> <a href="https://github.com/nexssp/package_select">https://github.com/nexssp/package_select</a>
+Select/Dropper now works only on Windows. Anyone is very welcome to write it for Linux and MacOS.</p>
+<p>File dropper allow to execute program in any language after dropping a file. You specify a command which you wish to execute in the --nxsExecute param. Please see below for details.</p>
+<h2>With -bg (Nexss Programmer Background Command)</h2>
+<p>Whatever file you will drop on the displayed window it will execute program in --nxsExecute. There you can use variables like on "default" and "helloWorld" templates.</p>
+<pre><code class="language-py">
+# add here the begining of Nexss Programmer template like on default or hello world template.
+# eg for python see: https://github.com/nexssp/language_python/blob/master/templates/helloWorld.py
 
-// and require
-const os = require("os");
+parsedJson["PythonOutput"] = "Hello from Python! " + \
+    str(platform.python_version()) + parsedJson["nxsIn"] # parsedJson["nxsIn"] contains path to the file you dropped in
 
-console.log(hostname());
+# and here the end of the template</code></pre>
+<pre><code class="language-sh">nexss -bg Select/Dropper  --_color=11ff55 --_x=100 \
+--_width=220 --_height=150 --_text="Action 1" --nxsExecute="nexss myprogram.py"</code></pre>
+<h2>With nohup version (Powershell)</h2>
+<p>See for more Nexss Programmer examples: <a href="https://github.com/nexssp/package_nexss/tree/master/Examples">https://github.com/nexssp/package_nexss/tree/master/Examples</a></p>
+<pre><code class="language-ps1"># Nexss Programmer MultiDropper Example
 
-console.log(os.arch());</code></pre>
-<h3>test</h3>
-<pre><code class="language-sh">nexss esm_main.js
+function nohup($command) {
+    Start-Process -FilePath "$env:comspec" -ArgumentList "/c $command"
+}
 
-# OR just
-
-node esm_main.js</code></pre>
+# All 3 commands in one line
+nohup('nexss Select/Dropper --process:title="My Action 1 - Image Resize"
+--_color=11ff55 --_x=100 --_width=220 --_height=150 --_text="Action 1"
+--nxsExecute="nexss action1.nexss"')
+nohup('nexss Select/Dropper --process:title="My Action 1 - Send Emails"
+--_color=55ff55 --_x=500 --_width=220 --_height=150 --_text="Action 2"
+--nxsExecute="nexss action2.nexss"')
+nohup('nexss Select/Dropper --process:title="My Action 1 - Another"
+--_color=88ffff --_x=900 --_width=220 --_height=150 --_text="Action 3 - Custom"
+--nxsExecute="nexss action3.nexss"')
+</code></pre>
       </div>
     </div>
   </div>
