--- a/11_blog-nexss-programmer/frontend/nexss-blog.html
+++ b/11_blog-nexss-programmer/frontend/nexss-blog.html
@@ -193,14 +193,14 @@ permalink: /11_blog-nexss-programmer/frontend/nexss-blog.html
         <h1>Frontend functionalities</h1>
 <h2>List of Tutorials</h2>
 <ul>
-<li><a href="/11_blog-nexss-programmer/frontend/nexss-blog.html#createnewproject">Create New Project vue2, react17</a></li>
+<li><a href="/11_blog-nexss-programmer/frontend/nexss-blog.html#createnewproject">Create New Project vue3, vue2, react17, preact</a></li>
 </ul>
 <p><a name="createnewproject"></a></p>
 <h3>Create new Frontend Project</h3>
-<p>To create new project (now: <strong>vue2</strong>, <strong>react17</strong>)</p>
+<p>To create new project (now: <strong>vue3</strong>, <strong>vue2</strong>, <strong>react17</strong>, <strong>preact</strong> )</p>
 <p>Execute the commands accordingly:</p>
-<pre><code class="language-sh">nexss p vue2 myvue2-project
-nexss p vue2 myvue2-project --install
+<pre><code class="language-sh">nexss p vue3 myvue2-project
+nexss p vue3 myvue2-project --install
 nexss p react17 react17-project
 </code></pre>
 <h3>Run hot reloading</h3>
