--- a/11_blog-nexss-programmer/speak/nexss-blog.html
+++ b/11_blog-nexss-programmer/speak/nexss-blog.html
@@ -1,8 +1,8 @@
 ---
-title: "BLOG Nexss Programmer - Installation"
-permalink: /pl/11_blog-nexss-programmer/installation/nexss-blog.html
+title: "BLOG Nexss Programmer - Speak"
+permalink: /11_blog-nexss-programmer/speak/nexss-blog.html
 ---
-<!DOCTYPE html><html lang="pl"><head>
+<!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
@@ -13,16 +13,16 @@ permalink: /pl/11_blog-nexss-programmer/installation/nexss-blog.html
 </script>
 
   <title>
-    BLOG Nexss Programmer - Installation
+    BLOG Nexss Programmer - Speak
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
-  <meta name="description" content="Installation - Nexss Programmer Blog">
+  <meta name="description" content="Speak - Nexss Programmer Blog">
   
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="BLOG Nexss Programmer - Installation">
+  <meta property="og:description" content="BLOG Nexss Programmer - Speak">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -53,11 +53,11 @@ permalink: /pl/11_blog-nexss-programmer/installation/nexss-blog.html
         <ul class="info" id="changeLanguage">
             <li>Made with ❤️ in <img alt="Nexss.com / Poland / Developed with Love" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a href="/en/11_blog-nexss-programmer/installation/nexss-blog.html">EN</a>
+                <a style="color:yellow;font-weight:bold;" href="/en/11_blog-nexss-programmer/speak/nexss-blog.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/11_blog-nexss-programmer/installation/nexss-blog.html">PL</a>
+                <a class="selected" href="/pl/11_blog-nexss-programmer/speak/nexss-blog.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -76,23 +76,23 @@ permalink: /pl/11_blog-nexss-programmer/installation/nexss-blog.html
     <div class="nav clearfix">
         <ul>
     <li>
-        <a href="pl/index.html#services">usługi</a>
+        <a href="index.html#services">services</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
+        <a class="career" href="nexss-career.html">career</a>
 
     </li>
     <li>
-        <a href="pl/nexss-blog.html"><strong>blog</strong></a>
+        <a href="nexss-blog.html"><strong>blog</strong></a>
 
     </li>
     <li>
-        <a href="pl/nexss-portfolio.html">portfolio</a>
+        <a href="nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
         <div class="btn__wrap__center">
-            <a href="pl/latwa-instalacja-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
+            <a href="easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
                 PROGRAMMER</a>
         </div>
     </div>
@@ -102,18 +102,18 @@ permalink: /pl/11_blog-nexss-programmer/installation/nexss-blog.html
     <div class="phone_nav">
         <ul>
     <li>
-        <a href="pl/index.html#services">usługi</a>
+        <a href="index.html#services">services</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
+        <a class="career" href="nexss-career.html">career</a>
 
     </li>
     <li>
-        <a href="pl/nexss-blog.html"><strong>blog</strong></a>
+        <a href="nexss-blog.html"><strong>blog</strong></a>
 
     </li>
     <li>
-        <a href="pl/nexss-portfolio.html">portfolio</a>
+        <a href="nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
@@ -142,58 +142,62 @@ permalink: /pl/11_blog-nexss-programmer/installation/nexss-blog.html
       <div class="column1">
                 <h3>Welcome</h3>
         <ul>
-                    <li><a href="pl/0_Welcome/news/nexss-blog.html">News </a></li>
+                    <li><a href="0_Welcome/news/nexss-blog.html">News </a></li>
                   </ul>
                 <h3>Nexss Programmer</h3>
         <ul>
-                    <li><a href="pl/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction </a></li>
-                    <li><a class="active" href="pl/11_blog-nexss-programmer/installation/nexss-blog.html"><strong>Installation</strong> </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/frontend/nexss-blog.html">Frontend </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/speak/nexss-blog.html">Speak </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/file-dropper/nexss-blog.html">File Dropper </a></li>
+                    <li><a href="11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction </a></li>
+                    <li><a href="11_blog-nexss-programmer/installation/nexss-blog.html">Installation </a></li>
+                    <li><a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
+                    <li><a href="11_blog-nexss-programmer/frontend/nexss-blog.html">Frontend </a></li>
+                    <li><a href="11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
+                    <li><a class="active" href="11_blog-nexss-programmer/speak/nexss-blog.html"><strong>Speak</strong> </a></li>
+                    <li><a href="11_blog-nexss-programmer/file-dropper/nexss-blog.html">File Dropper </a></li>
                   </ul>
                 <h3>Node.js</h3>
         <ul>
-                    <li><a href="pl/21_Node.js/module_alias/nexss-blog.html">Module_alias </a></li>
-                    <li><a href="pl/21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
-                    <li><a href="pl/21_Node.js/require_with_import/nexss-blog.html">Require_with_import </a></li>
+                    <li><a href="21_Node.js/module_alias/nexss-blog.html">Module_alias </a></li>
+                    <li><a href="21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
+                    <li><a href="21_Node.js/require_with_import/nexss-blog.html">Require_with_import </a></li>
                   </ul>
                 <h3>Bitwig Studio</h3>
         <ul>
-                    <li><a href="pl/333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html">Bitwig VST Video Player </a></li>
+                    <li><a href="333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html">Bitwig VST Video Player </a></li>
                   </ul>
                 <h3>Blender 3D</h3>
         <ul>
-                    <li><a href="pl/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates </a></li>
-                    <li><a href="pl/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
+                    <li><a href="369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates </a></li>
+                    <li><a href="369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
                   </ul>
                 <h3>Natron</h3>
         <ul>
-                    <li><a href="pl/639_blog-natron/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
+                    <li><a href="639_blog-natron/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
                   </ul>
                 <h3>Modern Web</h3>
         <ul>
-                    <li><a href="pl/669_Modern-Web/Interesting-html5-tags/nexss-blog.html">Interesting Html5 Tags </a></li>
+                    <li><a href="669_Modern-Web/Interesting-html5-tags/nexss-blog.html">Interesting Html5 Tags </a></li>
                   </ul>
                 <h3>Our Free Packages</h3>
         <ul>
-                    <li><a href="pl/969_Our-free-packages/introduction/nexss-blog.html">Introduction </a></li>
-                    <li><a href="pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages </a></li>
-                    <li><a href="pl/969_Our-free-packages/@nexssp-command/nexss-blog.html">@nexssp Command </a></li>
-                    <li><a href="pl/969_Our-free-packages/@nexssp-os/nexss-blog.html">@nexssp Os </a></li>
+                    <li><a href="969_Our-free-packages/introduction/nexss-blog.html">Introduction </a></li>
+                    <li><a href="969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages </a></li>
+                    <li><a href="969_Our-free-packages/@nexssp-command/nexss-blog.html">@nexssp Command </a></li>
+                    <li><a href="969_Our-free-packages/@nexssp-os/nexss-blog.html">@nexssp Os </a></li>
                   </ul>
               </div>
       <div class="column2">
-        <h1>Nexss Programmer - Installation</h1>
-<h2>Node.js</h2>
-<p>Nexss Programmer 2.x is written in the <a href="https://nodejs.org/">Node.js</a>. If you don't have it installed please go to the website <a href="https://nodejs.org/en/">https://nodejs.org/en/</a> and use instructions there.</p>
-<h2>Nexss Programmer</h2>
-<pre><code class="language-sh">npm i -g @nexssp/cli</code></pre>
-<h2>Using npx</h2>
-<p>You don't need to install Nexss Programmer and just use <strong>npx</strong> (after Node.js installation).</p>
-<pre><code class="language-sh">npx @nexssp/cli</code></pre>
+        <h1>Speak / Read the website content!</h1>
+<h2>Basic Examples</h2>
+<h3>file: readwebsite1.nexss</h3>
+<p>Below is the example of speaking the website title.</p>
+<p><img src="https://user-images.githubusercontent.com/53263666/144295624-6846d7e3-940c-4cb2-8f7e-b29a9e7b49f2.png" alt="Nexss Programmer - Speak website content/title"></p>
+<h2>Using nexss variables</h2>
+<pre><code class="language-nexss">https://nexss.com --nxsAs=myWebsiteSource
+Select/Dom --nxsInFrom=myWebsiteSource --_selector=title
+Speak
+Select/Dom --nxsInFrom=myWebsiteSource --_selector=h1
+Speak
+Output/End "Done."</code></pre>
       </div>
     </div>
   </div>
@@ -270,14 +274,14 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
     
     <section class="ft-main">
       <div class="ft-main-item">
-        <h4 class="ft-title">O nas</h4>
+        <h4 class="ft-title">About</h4>
         <ul>
-          <li><a href="pl/index.html#services">Usługi</a></li>
-          <li><a class="career" href="pl/nexss-kariera.html">Career</a>
+          <li><a href="index.html#services">Services</a></li>
+          <li><a class="career" href="nexss-career.html">Career</a>
 </li>
-          <li><a href="pl/nexss-portfolio.html">Portfolio</a>
+          <li><a href="nexss-portfolio.html">Portfolio</a>
 </li>
-          <li><a href="pl/faq-najczesciej-zadawane-pytania.html">FAQ</a>
+          <li><a href="faq.html">FAQ</a>
 </li>
           <li></li>
         </ul>
@@ -285,60 +289,60 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
       <div class="ft-main-item">
         <h4 class="ft-title">Nexss Programmer</h4>
         <ul>
-          <li><a title="Nexss Programmer - Prezentacja wideo" target="_blank" style="color:yellow;" href="https://www.youtube.com/watch?v=7WbnYyEnBNk">Prezentacja wideo</a></li>
-          <li><a href="pl/latwa-instalacja-nexss-programmer.html">Instalacja</a>
+          <li><a title="Nexss Programmer - Video Presentation" target="_blank" style="color:yellow;" href="https://www.youtube.com/watch?v=7WbnYyEnBNk">Video Presentation</a></li>
+          <li><a href="easy-install-nexss-programmer.html">Install</a>
 </li>
           <li>
-            <a href="pl/nexss-programmer-jezyki-programowania.html">Obsługiwane języki programowania</a>
+            <a href="nexss-programming-languages.html">Supported programming languages</a>
 
           </li>
           <li>
-            <a href="pl/nexss-programmer-funkcje.html">Funkcje</a>
+            <a href="nexss-programmer-features.html">Features</a>
 
 
           </li>
           <li>
-            <a href="pl/programmer.html">Dokumentacja</a>
+            <a href="programmer.html">Documentation</a>
 
           </li>
           <li>
-            <a href="pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">Pakiety</a>
+            <a href="969_Our-free-packages/list-of-free-packages/nexss-blog.html">Packages</a>
 
           </li>
           <li>
-            <a href="pl/fund.html">Fund</a>
+            <a href="fund.html">Fund</a>
 
           </li>
           <li></li>
         </ul>
       </div>
       <div class="ft-main-item">
-        <h4 class="ft-title">Nauka</h4>
+        <h4 class="ft-title">Learn</h4>
         <ul>
-          <li><a href="pl/nexss-blog.html"><strong>Blog</strong></a>
+          <li><a href="nexss-blog.html"><strong>Blog</strong></a>
 </li>
-          <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+          <li><a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
 </li>
           <li></li>
         </ul>
       </div>
       <div class="ft-main-item">
-        <h4 class="ft-title">Kontakt</h4>
+        <h4 class="ft-title">Contact</h4>
         <ul>
-          <li><a href="pl/index.html#contacts">Kontakt</a></li>
+          <li><a href="index.html#contacts">Contact</a></li>
           <li>
-            <h5><a style="color:#00ff90;" href="mailto:hello@nexss.com">Wycena projektu</a></h5>
+            <h5><a style="color:#00ff90;" href="mailto:hello@nexss.com">Get a Quote</a></h5>
           </li>
           <li><a href="mailto:hello@nexss.com">
               hello@nexss.com</a></li>
           <!-- <li>
-                    <a href="pl/polityka-prywatnosci.html">Polityka Prywatności</a>
+                    <a href="privacy-policy.html">Privacy Policy</a>
                   </li>
                   <li>
-                    <a href="pl/regulamin.html">Regulamin</a>
+                    <a href="terms-and-conditions.html">Terms and Conditions</a>
                   </li> -->
           <li>
-            <a href="pl/fund.html">Fund</a>
+            <a href="fund.html">Fund</a>
 
           </li>
           <li></li>
@@ -347,7 +351,7 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
           </section>
     <ul>
       <li>
-        <strong class="btn__green" style="padding:10px;border-radius: 12px;">WYCENA PROJEKTU <a href="mailto:hello@nexss.com"><i class="fa fa-hand-o-right"></i>
+        <strong class="btn__green" style="padding:10px;border-radius: 12px;">GET A QUOTE <a href="mailto:hello@nexss.com"><i class="fa fa-hand-o-right"></i>
             hello@nexss.com</a></strong>
       </li>
     </ul>
@@ -363,8 +367,8 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
     Copyright © 2008 - 2021 Nexss.com, Made with ❤️ in <img alt="Nexss.com / Poland / Developed with Love" height="10" src="assets/images/flagPL.jpg">
   </div>
   <div id="infoCookie" style="z-index:369369369;position:fixed;bottom:0;height:55px;background-color:black;width:100%;visibility:hidden;">
-    <b>Nexss.com</b> używa ciasteczka do rejestrowania danych statystycznych.<br>
-    Więcej tutaj: <a style="color:yellow;" target="_blank" href="pl/polityka-prywatnosci.html">Polityka Prywatności</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
+    <b>Nexss.com</b> website use cookies on this website to log statistics data.<br>
+    More here: <a style="color:yellow;" target="_blank" href="privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 <script type="text/javascript">
