--- a/pl/669_Modern-Web/Interesting-html5-tags/nexss-blog.html
+++ b/pl/669_Modern-Web/Interesting-html5-tags/nexss-blog.html
@@ -151,6 +151,7 @@ permalink: /pl/669_Modern-Web/Interesting-html5-tags/nexss-blog.html
                     <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
                     <li><a href="pl/11_blog-nexss-programmer/frontend/nexss-blog.html">Frontend </a></li>
                     <li><a href="pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
+                    <li><a href="pl/11_blog-nexss-programmer/speak/nexss-blog.html">Speak </a></li>
                     <li><a href="pl/11_blog-nexss-programmer/file-dropper/nexss-blog.html">File Dropper </a></li>
                   </ul>
                 <h3>Node.js</h3>
