--- a/pl/11_blog-nexss-programmer/installation/nexss-blog.html
+++ b/pl/11_blog-nexss-programmer/installation/nexss-blog.html
@@ -193,7 +193,17 @@ permalink: /pl/11_blog-nexss-programmer/installation/nexss-blog.html
 <pre><code class="language-sh">npm i -g @nexssp/cli</code></pre>
 <h2>Using npx</h2>
 <p>You don't need to install Nexss Programmer and just use <strong>npx</strong> (after Node.js installation).</p>
-<pre><code class="language-sh">npx @nexssp/cli</code></pre>
+<pre><code class="language-sh">npx @nexssp/cli
+
+# From version 2.5.78+ you can do:
+npx nexss Id</code></pre>
+<h2>Display help</h2>
+<pre><code class="language-sh">nexss help
+npx nexss help</code></pre>
+<h2>Enable/Disable colors</h2>
+<p><img src="https://user-images.githubusercontent.com/53263666/144868514-bfa2b39f-dc1d-4b40-9565-b948e902c95a.png" alt="Enable colored outout - nexss programmer"></p>
+<pre><code class="language-sh">nexss -output-colors 1 # Enable colorized output
+nexss -output-colors 0</code></pre>
       </div>
     </div>
   </div>
