--- a/en/nexss-blog.html
+++ b/en/nexss-blog.html
@@ -191,7 +191,14 @@ permalink: /en/nexss-blog.html
               </div>
       <div class="column2">
         <h1>News</h1>
-<h2><strong>Nexss</strong> Programmer release <b>2.5.83</b> new Select/Dom</h2>
+<h2><strong>Nexss</strong> Programmer release <b>2.5.87</b> new Clipboard/Save</h2>
+<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">December 7th, 2021</span></p>
+<p><strong>Clipboard/Save</strong>
+Save clipboard as text or image. More: <code>nexss Clipboard/Save help</code></p>
+<ul>
+<li><a href="https://github.com/nexssp/cli/releases/tag/2.5.87">more</a>
+<h2><strong>Nexss</strong> Programmer release <b>2.5.83</b> new Select/Dom</h2></li>
+</ul>
 <p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">December 1st, 2021</span></p>
 <p><strong>Select/Dom</strong> package and more <strong>Speak</strong> examples.<br>
 <img src="https://user-images.githubusercontent.com/53263666/144295624-6846d7e3-940c-4cb2-8f7e-b29a9e7b49f2.png" alt="Nexss Programmer - Speak website content/title"></p>
