--- a/669_Modern-Web/Interesting-html5-tags/nexss-blog.html
+++ b/669_Modern-Web/Interesting-html5-tags/nexss-blog.html
@@ -187,6 +187,7 @@ permalink: /669_Modern-Web/Interesting-html5-tags/nexss-blog.html
                 <h3>Modern Web</h3>
         <ul>
                     <li><a class="active" href="669_Modern-Web/Interesting-html5-tags/nexss-blog.html"><strong>Interesting Html5 Tags</strong> </a></li>
+                    <li><a href="669_Modern-Web/Lighting-fast-loading/nexss-blog.html">Lighting Fast Loading </a></li>
                   </ul>
                 <h3>Our Free Packages</h3>
         <ul>
