--- a/en/11_blog-nexss-programmer/package_json_usage/nexss-blog.html
+++ b/en/11_blog-nexss-programmer/package_json_usage/nexss-blog.html
@@ -187,6 +187,7 @@ permalink: /en/11_blog-nexss-programmer/package_json_usage/nexss-blog.html
                 <h3>Modern Web</h3>
         <ul>
                     <li><a href="en/669_Modern-Web/Interesting-html5-tags/nexss-blog.html">Interesting Html5 Tags </a></li>
+                    <li><a href="en/669_Modern-Web/Lighting-fast-loading/nexss-blog.html">Lighting Fast Loading </a></li>
                   </ul>
                 <h3>Our Free Packages</h3>
         <ul>
