--- a/en/669_Modern-Web/Lighting-fast-loading/nexss-blog.html
+++ b/en/669_Modern-Web/Lighting-fast-loading/nexss-blog.html
@@ -1,8 +1,8 @@
 ---
-title: "BLOG Nexss Programmer - Installation"
-permalink: /pl/11_blog-nexss-programmer/installation/nexss-blog.html
+title: "BLOG Modern Web - Lighting Fast Loading"
+permalink: /en/669_Modern-Web/Lighting-fast-loading/nexss-blog.html
 ---
-<!DOCTYPE html><html lang="pl"><head>
+<!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
@@ -13,16 +13,16 @@ permalink: /pl/11_blog-nexss-programmer/installation/nexss-blog.html
 </script>
 
   <title>
-    BLOG Nexss Programmer - Installation
+    BLOG Modern Web - Lighting Fast Loading
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
-  <meta name="description" content="Installation - Nexss Programmer Blog">
-  
+  <meta name="description" content="Lighting Fast Loading - Nexss Programmer Blog">
+  <link rel="canonical" href="/669_Modern-Web/Lighting-fast-loading/nexss-blog.html">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="BLOG Nexss Programmer - Installation">
+  <meta property="og:description" content="BLOG Modern Web - Lighting Fast Loading">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -53,11 +53,11 @@ permalink: /pl/11_blog-nexss-programmer/installation/nexss-blog.html
         <ul class="info" id="changeLanguage">
             <li>Made with ❤️ in <img alt="Nexss.com / Poland / Developed with Love" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a href="/en/11_blog-nexss-programmer/installation/nexss-blog.html">EN</a>
+                <a style="color:yellow;font-weight:bold;" href="/en/nexss-blog.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/nexss-blog.html">PL</a>
+                <a class="selected" href="/pl/669_Modern-Web/Lighting-fast-loading/nexss-blog.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -76,23 +76,23 @@ permalink: /pl/11_blog-nexss-programmer/installation/nexss-blog.html
     <div class="nav clearfix">
         <ul>
     <li>
-        <a href="pl/index.html#services">usługi</a>
+        <a href="en/index.html#services">services</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-career.html">Kariera</a>
+        <a class="career" href="en/nexss-career.html">career</a>
 
     </li>
     <li>
-        <a href="pl/nexss-blog.html"><strong>blog</strong></a>
+        <a href="en/nexss-blog.html"><strong>blog</strong></a>
 
     </li>
     <li>
-        <a href="pl/nexss-portfolio.html">portfolio</a>
+        <a href="en/nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
         <div class="btn__wrap__center">
-            <a href="pl/easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
+            <a href="en/easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
                 PROGRAMMER</a>
         </div>
     </div>
@@ -102,18 +102,18 @@ permalink: /pl/11_blog-nexss-programmer/installation/nexss-blog.html
     <div class="phone_nav">
         <ul>
     <li>
-        <a href="pl/index.html#services">usługi</a>
+        <a href="en/index.html#services">services</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-career.html">Kariera</a>
+        <a class="career" href="en/nexss-career.html">career</a>
 
     </li>
     <li>
-        <a href="pl/nexss-blog.html"><strong>blog</strong></a>
+        <a href="en/nexss-blog.html"><strong>blog</strong></a>
 
     </li>
     <li>
-        <a href="pl/nexss-portfolio.html">portfolio</a>
+        <a href="en/nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
@@ -142,81 +142,78 @@ permalink: /pl/11_blog-nexss-programmer/installation/nexss-blog.html
       <div class="column1">
                 <h3>Welcome</h3>
         <ul>
-                    <li><a href="pl/0_Welcome/news/nexss-blog.html">News </a></li>
+                    <li><a href="en/0_Welcome/news/nexss-blog.html">News </a></li>
                   </ul>
                 <h3>Nexss Programmer</h3>
         <ul>
-                    <li><a href="pl/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction </a></li>
-                    <li><a class="active" href="pl/11_blog-nexss-programmer/installation/nexss-blog.html"><strong>Installation</strong> </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/frontend/nexss-blog.html">Frontend </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/speak/nexss-blog.html">Speak </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/file-dropper/nexss-blog.html">File Dropper </a></li>
+                    <li><a href="en/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction </a></li>
+                    <li><a href="en/11_blog-nexss-programmer/installation/nexss-blog.html">Installation </a></li>
+                    <li><a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
+                    <li><a href="en/11_blog-nexss-programmer/frontend/nexss-blog.html">Frontend </a></li>
+                    <li><a href="en/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
+                    <li><a href="en/11_blog-nexss-programmer/speak/nexss-blog.html">Speak </a></li>
+                    <li><a href="en/11_blog-nexss-programmer/file-dropper/nexss-blog.html">File Dropper </a></li>
                   </ul>
                 <h3>Rust Lang</h3>
         <ul>
-                    <li><a href="pl/13_Rust-lang/bin-and-lib-one-crate/nexss-blog.html">Bin And Lib One Crate </a></li>
-                    <li><a href="pl/13_Rust-lang/speed-up-Rust-workflow/nexss-blog.html">Speed Up Rust Workflow </a></li>
-                    <li><a href="pl/13_Rust-lang/useful-Rust-macros/nexss-blog.html">Useful Rust Macros </a></li>
-                    <li><a href="pl/13_Rust-lang/cargo-edit-cli/nexss-blog.html">Cargo Edit Cli </a></li>
+                    <li><a href="en/13_Rust-lang/bin-and-lib-one-crate/nexss-blog.html">Bin And Lib One Crate </a></li>
+                    <li><a href="en/13_Rust-lang/speed-up-Rust-workflow/nexss-blog.html">Speed Up Rust Workflow </a></li>
+                    <li><a href="en/13_Rust-lang/useful-Rust-macros/nexss-blog.html">Useful Rust Macros </a></li>
+                    <li><a href="en/13_Rust-lang/cargo-edit-cli/nexss-blog.html">Cargo Edit Cli </a></li>
                   </ul>
                 <h3>Node.js</h3>
         <ul>
-                    <li><a href="pl/21_Node.js/module_alias/nexss-blog.html">Module_alias </a></li>
-                    <li><a href="pl/21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
-                    <li><a href="pl/21_Node.js/require_with_import/nexss-blog.html">Require_with_import </a></li>
+                    <li><a href="en/21_Node.js/module_alias/nexss-blog.html">Module_alias </a></li>
+                    <li><a href="en/21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
+                    <li><a href="en/21_Node.js/require_with_import/nexss-blog.html">Require_with_import </a></li>
                   </ul>
                 <h3>Bitwig Studio</h3>
         <ul>
-                    <li><a href="pl/333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html">Bitwig VST Video Player </a></li>
+                    <li><a href="en/333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html">Bitwig VST Video Player </a></li>
                   </ul>
                 <h3>Productivity</h3>
         <ul>
-                    <li><a href="pl/334_productivity/VSCode-Custom-Profiles/nexss-blog.html">VSCode Custom Profiles </a></li>
+                    <li><a href="en/334_productivity/VSCode-Custom-Profiles/nexss-blog.html">VSCode Custom Profiles </a></li>
                   </ul>
                 <h3>Blender 3D</h3>
         <ul>
-                    <li><a href="pl/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates </a></li>
-                    <li><a href="pl/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
+                    <li><a href="en/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates </a></li>
+                    <li><a href="en/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
                   </ul>
                 <h3>Natron</h3>
         <ul>
-                    <li><a href="pl/639_blog-natron/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
+                    <li><a href="en/639_blog-natron/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
                   </ul>
                 <h3>Modern Web</h3>
         <ul>
-                    <li><a href="pl/669_Modern-Web/Interesting-html5-tags/nexss-blog.html">Interesting Html5 Tags </a></li>
-                    <li><a href="pl/669_Modern-Web/Lighting-fast-loading/nexss-blog.html">Lighting Fast Loading </a></li>
+                    <li><a href="en/669_Modern-Web/Interesting-html5-tags/nexss-blog.html">Interesting Html5 Tags </a></li>
+                    <li><a class="active" href="en/669_Modern-Web/Lighting-fast-loading/nexss-blog.html"><strong>Lighting Fast Loading</strong> </a></li>
                   </ul>
                 <h3>Our Free Packages</h3>
         <ul>
-                    <li><a href="pl/969_Our-free-packages/introduction/nexss-blog.html">Introduction </a></li>
-                    <li><a href="pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages </a></li>
-                    <li><a href="pl/969_Our-free-packages/@nexssp-command/nexss-blog.html">@nexssp Command </a></li>
-                    <li><a href="pl/969_Our-free-packages/@nexssp-os/nexss-blog.html">@nexssp Os </a></li>
+                    <li><a href="en/969_Our-free-packages/introduction/nexss-blog.html">Introduction </a></li>
+                    <li><a href="en/969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages </a></li>
+                    <li><a href="en/969_Our-free-packages/@nexssp-command/nexss-blog.html">@nexssp Command </a></li>
+                    <li><a href="en/969_Our-free-packages/@nexssp-os/nexss-blog.html">@nexssp Os </a></li>
                   </ul>
               </div>
       <div class="column2">
-        <h1>Nexss Programmer - Installation</h1>
-<h2>Node.js</h2>
-<p>Nexss Programmer 2.x is written in the <a href="https://nodejs.org/">Node.js</a>. If you don't have it installed please go to the website <a href="https://nodejs.org/en/">https://nodejs.org/en/</a> and use instructions there.</p>
-<h2>Nexss Programmer</h2>
-<pre><code class="language-sh">npm i -g @nexssp/cli</code></pre>
-<h2>Using npx</h2>
-<p>You don't need to install Nexss Programmer and just use <strong>npx</strong> (after Node.js installation).</p>
-<pre><code class="language-sh">npx @nexssp/cli
+        <h1>Lightening Fast Loading of your website</h1>
+<p>There are few things which you may do to speed up your website loading.</p>
+<h2>Convert Images to WebP format</h2>
+<p>WebP images are much smaller then even jpg's. Depends on image and transparency, for example from <strong>260KB -&gt; 45KB</strong>.</p>
+<p>Convert images with Nexss Programmer easy!</p>
+<pre><code class="language-sh"># For individual images
+nexss Convert/ToWebP file1.jpg file2.jpg
+# OR if you don't want to install nexss programmer
+npx @nexssp/cli Convert/ToWebP file1.jpg file2.jpg
 
-# From version 2.5.78+ you can do:
-npx nexss Id</code></pre>
-<h2>Display help</h2>
-<pre><code class="language-sh">nexss help
-npx nexss help</code></pre>
-<h2>Enable/Disable colors</h2>
-<p><img src="https://user-images.githubusercontent.com/53263666/144868514-bfa2b39f-dc1d-4b40-9565-b948e902c95a.png" alt="Enable colored outout - nexss programmer"></p>
-<pre><code class="language-sh">nexss -output-colors 1 # Enable colorized output
-nexss -output-colors 0</code></pre>
-        <span style="margin-top:30px;font-size:10px;font-color:#aaa;">If you found it valuable, please join to the nexss.com supporters at: <a href="pl/fund.html">Support Nexss.com</a></span>
+# For whole folder of images.
+nexss Convert/ToWebP folder # folder contains jpg, png or gif images. Nexss Programmer will save you webp images in the current folder you are in. use npx accordingly</code></pre>
+<p>TODO: More flexible selection of images like recursive subfolders and more..</p>
+<h2>More soon</h2>
+<p>WIP..</p>
+        <span style="margin-top:30px;font-size:10px;font-color:#aaa;">If you found it valuable, please join to the nexss.com supporters at: <a href="en/fund.html">Support Nexss.com</a></span>
       </div>
     </div>
   </div>
@@ -293,14 +290,14 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
     
     <section class="ft-main">
       <div class="ft-main-item">
-        <h4 class="ft-title">O nas</h4>
+        <h4 class="ft-title">About</h4>
         <ul>
-          <li><a href="pl/index.html#services">Usługi</a></li>
-          <li><a class="career" href="pl/nexss-career.html">Career</a>
+          <li><a href="en/index.html#services">Services</a></li>
+          <li><a class="career" href="en/nexss-career.html">Career</a>
 </li>
-          <li><a href="pl/nexss-portfolio.html">Portfolio</a>
+          <li><a href="en/nexss-portfolio.html">Portfolio</a>
 </li>
-          <li><a href="pl/faq.html">FAQ</a>
+          <li><a href="en/faq.html">FAQ</a>
 </li>
           <li></li>
         </ul>
@@ -308,60 +305,60 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
       <div class="ft-main-item">
         <h4 class="ft-title">Nexss Programmer</h4>
         <ul>
-          <li><a title="Nexss Programmer - Prezentacja wideo" target="_blank" style="color:yellow;" href="https://www.youtube.com/watch?v=7WbnYyEnBNk">Prezentacja wideo</a></li>
-          <li><a href="pl/easy-install-nexss-programmer.html">Instalacja</a>
+          <li><a title="Nexss Programmer - Video Presentation" target="_blank" style="color:yellow;" href="https://www.youtube.com/watch?v=7WbnYyEnBNk">Video Presentation</a></li>
+          <li><a href="en/easy-install-nexss-programmer.html">Install</a>
 </li>
           <li>
-            <a href="pl/nexss-programming-languages.html">Obsługiwane języki programowania</a>
+            <a href="en/nexss-programming-languages.html">Supported programming languages</a>
 
           </li>
           <li>
-            <a href="pl/nexss-programmer-features.html">Funkcje</a>
+            <a href="en/nexss-programmer-features.html">Features</a>
 
 
           </li>
           <li>
-            <a href="pl/programmer.html">Dokumentacja</a>
+            <a href="en/programmer.html">Documentation</a>
 
           </li>
           <li>
-            <a href="pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">Pakiety</a>
+            <a href="en/969_Our-free-packages/list-of-free-packages/nexss-blog.html">Packages</a>
 
           </li>
           <li>
-            <a href="pl/fund.html">Fund</a>
+            <a href="en/fund.html">Fund</a>
 
           </li>
           <li></li>
         </ul>
       </div>
       <div class="ft-main-item">
-        <h4 class="ft-title">Nauka</h4>
+        <h4 class="ft-title">Learn</h4>
         <ul>
-          <li><a href="pl/nexss-blog.html"><strong>Blog</strong></a>
+          <li><a href="en/nexss-blog.html"><strong>Blog</strong></a>
 </li>
-          <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+          <li><a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
 </li>
           <li></li>
         </ul>
       </div>
       <div class="ft-main-item">
-        <h4 class="ft-title">Kontakt</h4>
+        <h4 class="ft-title">Contact</h4>
         <ul>
-          <li><a href="pl/index.html#contacts">Kontakt</a></li>
+          <li><a href="en/index.html#contacts">Contact</a></li>
           <li>
-            <h5><a style="color:#00ff90;" href="mailto:hello@nexss.com">Wycena projektu</a></h5>
+            <h5><a style="color:#00ff90;" href="mailto:hello@nexss.com">Get a Quote</a></h5>
           </li>
           <li><a href="mailto:hello@nexss.com">
               hello@nexss.com</a></li>
           <!-- <li>
-                    <a href="pl/privacy-policy.html">Polityka Prywatności</a>
+                    <a href="en/privacy-policy.html">Privacy Policy</a>
                   </li>
                   <li>
-                    <a href="pl/terms-and-conditions.html">Regulamin</a>
+                    <a href="en/terms-and-conditions.html">Terms and Conditions</a>
                   </li> -->
           <li>
-            <a href="pl/fund.html">Fund</a>
+            <a href="en/fund.html">Fund</a>
 
           </li>
           <li></li>
@@ -370,7 +367,7 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
           </section>
     <ul>
       <li>
-        <strong class="btn__green" style="padding:10px;border-radius: 12px;">WYCENA PROJEKTU <a href="mailto:hello@nexss.com"><i class="fa fa-hand-o-right"></i>
+        <strong class="btn__green" style="padding:10px;border-radius: 12px;">GET A QUOTE <a href="mailto:hello@nexss.com"><i class="fa fa-hand-o-right"></i>
             hello@nexss.com</a></strong>
       </li>
     </ul>
@@ -395,7 +392,7 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
     visibility: hidden;
   ">
   <b>Nexss.com</b>
-  używa ciasteczka do rejestrowania danych statystycznych.
+  website use cookies on this website to log statistics data.
   <a id="acceptCookie" style="
       color: white;
       font-size: 20px;
