--- a/pl/21_Node.js/require_with_import/nexss-blog.html
+++ b/pl/21_Node.js/require_with_import/nexss-blog.html
@@ -187,6 +187,7 @@ permalink: /pl/21_Node.js/require_with_import/nexss-blog.html
                 <h3>Modern Web</h3>
         <ul>
                     <li><a href="pl/669_Modern-Web/Interesting-html5-tags/nexss-blog.html">Interesting Html5 Tags </a></li>
+                    <li><a href="pl/669_Modern-Web/Lighting-fast-loading/nexss-blog.html">Lighting Fast Loading </a></li>
                   </ul>
                 <h3>Our Free Packages</h3>
         <ul>
